--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=PT+Sans&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="dist/css/app.css">
+    <link rel="stylesheet" href="dist/css/app.css"> <!-- References css compiling style, dont reference scss file -->
 </head>
 <body>
     <h1>Hola Mundo con SASS</h1>
