header and navigation styles

--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
     <link rel="stylesheet" href="dist/css/app.css"> <!-- References css compiling style, dont reference scss file -->
 </head>
 <body>
-    <h1>Hola Mundo con SASS</h1>
+    <header class="header">
+        <div class="container header-content">
+            <h1>Techno & EDM Festival</h1>
+
+            <nav class="main-navigation">
+                <a href="">Lineup</a>
+                <a href="">Galeria</a>
+                <a href="">Boletos</a>
+            </nav>
+        </div>
+    </header>
 </body>
 </html>
