html for festival

--- a/index.html
+++ b/index.html
@@ -35,5 +35,20 @@
             <source src="video/dj.webm" type="video/webm"/>
         </video>
     </div>
+
+    <section>
+        <div class="image">
+            <img src="src/img/imagen_dj.jpg" alt="Sobre festival">
+        </div>
+
+        <div class="festival-content">
+            <h2>Techno & EDM Festival</h2>
+            <p class="date">Julio 2026, Bogotá D.C, Colombia</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                Odio ab, velit perferendis voluptatibus magnam sequi, earum maxime explicabo sit 
+                voluptate expedita maiores. Quidem ea eius delectus? Est magni aspernatur deserunt?</p>
+        </div>
+    </section>
+
 </body>
 </html>
