--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </video>
     </div>
 
-    <section>
+    <section class="about-festival">
         <div class="image">
             <img src="src/img/imagen_dj.jpg" alt="Sobre festival">
         </div>
