--- a/index.html
+++ b/index.html
@@ -161,5 +161,45 @@
         </div> <!--.stages-container -->
     </section>
 
+    <section id="tickets" class="tickets-container">
+        <h3>Boletos</h3>
+    
+        <div class="tickets">
+            <div class="ticket">
+                <p class="ticket-name">Pase 1 Día</p>
+                <header class="ticket-header">
+                    <p>Incluye</p>
+                </header>
+                <div class="ticket-body">
+                    <ul>
+                        <li>Acceso a ambos escenarios</li>
+                        <li>Bebida Ilimitada</li>
+                        <li>Camisa / Pulsera del Evento</li>
+                    </ul>
+                </div>
+                <footer class="ticket-footer">
+                    <p>$100</p>
+                </footer>
+            </div>
+            <div class="ticket">
+                <p class="ticket-name">Pase 2 Días</p>
+                <header class="ticket-header">
+                    <p>Incluye</p>
+                </header>
+                <div class="ticket-body">
+                    <ul>
+                        <li>Acceso a ambos escenarios</li>
+                        <li>Bebida Ilimitada</li>
+                        <li>Camisa / Pulsera del Evento</li>
+                        <li>Acceso VIP</li>
+                    </ul>
+                </div>
+                <footer class="ticket-footer">
+                    <p>$180</p>
+                </footer>
+            </div>
+        </div>
+    </section>
+
 </body>
 </html>
