--- a/index.html
+++ b/index.html
@@ -201,5 +201,9 @@
         </div>
     </section>
 
+    <footer class="footer">
+        <p>Techno & EDM Festival. All rights reserved</p>
+    </footer>
+
 </body>
 </html>
