added js folder, script.js, added into gulp and html

--- a/index.html
+++ b/index.html
@@ -205,5 +205,7 @@
         <p>Techno & EDM Festival. All rights reserved</p>
     </footer>
 
+    <script src="dist/js/script.js"></script>
+
 </body>
 </html>
