images added in html with js

--- a/index.html
+++ b/index.html
@@ -161,6 +161,12 @@
         </div> <!--.stages-container -->
     </section>
 
+    <section id="gallery" class="gallery">
+        <h3>Galeria</h3>
+        
+        <ul class="gallery-images"></ul>
+    </section>
+
     <section id="tickets" class="tickets-container">
         <h3>Boletos</h3>
     
