added some SASS for gallery section

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
     <section id="gallery" class="gallery">
         <h3>Galeria</h3>
         
-        <ul class="gallery-images"></ul>
+        <div class="gallery-images"></div>
     </section>
 
     <section id="tickets" class="tickets-container">
