--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
             <h1>Techno & EDM Festival</h1>
 
             <nav class="main-navigation">
-                <a href="">Lineup</a>
-                <a href="">Galeria</a>
-                <a href="">Boletos</a>
+                <a href="#lineup">Lineup</a>
+                <a href="#gallery">Galeria</a>
+                <a href="#tickets">Boletos</a>
             </nav>
         </div>
     </header>
