--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
     <section class="about-festival">
         <div class="image">
             <picture>
-                <source srcset="build/img/imagen_dj.avif" type="image/avif" />
-                <source srcset="build/img/imagen_dj.webp" type="image/webp" />
-                <img width="300" height="200" loading="lazy" src="build/img/imagen_dj.jpg" alt="Sobre festival"> <!-- Lazy load, width and height required -->
+                <source srcset="dist/img/imagen_dj.avif" type="image/avif" />
+                <source srcset="dist/img/imagen_dj.webp" type="image/webp" />
+                <img width="300" height="200" loading="lazy" src="dist/img/imagen_dj.jpg" alt="Sobre festival"> <!-- Lazy load, width and height required -->
             </picture>
         </div>
 
